--- a/Pipfile
+++ b/Pipfile
@@ -1,12 +1,20 @@
 [[source]]
+
 url = "https://pypi.python.org/simple"
 name = "pypi"
 verify_ssl = true
 
+
 [requires]
+
 python_version = "3.5"
+
 
 [dev-packages]
 
+
+
 [packages]
+
 pymysql = "*"
+inquirer = "*"
